# Parallel-Gaussian-method

./: .gitignore  CMakeLists.txt  ClangFormat.cmake  Makefile  README.md  main.cc
SLE/: SLE.cc  SLE.h  gauss_solver.cc  gauss_solver.h  generator_SLE.cc  generator_SLE.h  printer_SLE.cc  printer_SLE.h  reader_SLE.cc  reader_SLE.h  system_of_linear_equations.cc  system_of_linear_equations.h
gauss_solver/: gauss_solver.cc  gauss_solver.h  linear_system.cc  linear_system.h  matrix_manager.cc  matrix_manager.h
interface/: console_interface.cc  console_interface.h
linear_equation_solver/: gauss_solver.cc  gauss_solver.h  system_of_linear_equations.cc  system_of_linear_equations.h
resources/: augmented_matrix_10.txt  incorrect_file_1.txt  incorrect_file_2.txt  incorrect_file_3.txt  incorrect_file_4.txt
utils/: barrier.cc  barrier.h  timer.cc  timer.h
